--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -11,148 +11,152 @@
     .product--information { height: fit-content; }
 </style>
 
-<div class="max-w-6xl mx-auto my-8">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
-        <div class="product--medias">
-            <div class="hidden md:block">
-                {% for media in product.media %}
-                    <div class="h-100 overflow-hidden p-2">
-                        {% render 'product-media', media: media %}
+<div x-data="{ productModalOpen: false }">
+
+    <div class="max-w-6xl mx-auto my-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
+            <div class="product--medias">
+                <div class="hidden md:block">
+                    {% for media in product.media %}
+                        <div class="h-100 overflow-hidden p-2">
+                            {% render 'product-media', media: media %}
+                        </div>
+                    {% endfor %}
+                </div>
+
+                <div class="md:hidden">
+                    <div class="swiper">
+                        <div class="swiper-wrapper">
+                            {% for media in product.media %}
+                                <div class="swiper-slide">
+                                    <div class="h-[100vw] overflow-hidden p-2">
+                                        {% render 'product-media', media: media %}
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        </div>
+
+                        <div class="swiper-pagination"></div>
+
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
                     </div>
-                {% endfor %}
+                </div>
             </div>
 
-            <div class="md:hidden">
-                <div class="swiper">
-                    <div class="swiper-wrapper">
-                        {% for media in product.media %}
-                            <div class="swiper-slide">
-                                <div class="h-[100vw] overflow-hidden p-2">
-                                    {% render 'product-media', media: media %}
+            <div class="product--information sticky top-5 p-2">
+                {% form 'product', product, id: 'product-form', novalidate: 'novalidate' %}
+                    <input type="hidden" name="id" value="{{ selected_variant.id }}">
+
+                    {% for block in section.blocks %}
+                        {% case block.type %}
+                            {% when 'vendor' %}
+                                <div class="my-3">
+                                    <span class="text-xs text-gray-500">{{ product.vendor }}</span>
                                 </div>
-                            </div>
-                        {% endfor %}
-                    </div>
-
-                    <div class="swiper-pagination"></div>
-
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
-                </div>
-            </div>
-        </div>
-
-        <div class="product--information sticky top-5 p-2">
-            {% form 'product', product, id: 'product-form', novalidate: 'novalidate' %}
-                <input type="hidden" name="id" value="{{ selected_variant.id }}">
-
-                {% for block in section.blocks %}
-                    {% case block.type %}
-                        {% when 'vendor' %}
-                            <div class="my-3">
-                                <span class="text-xs text-gray-500">{{ product.vendor }}</span>
-                            </div>
-                        {% when 'title' %}
-                            <div class="my-3">
-                                <h1 class="text-3xl text-gray-900">{{ product.title }}</h1>
-                            </div>
-                        {% when 'price' %}
-                            <div class="my-3" id="price-{{ section.id }}">
-                                <span class="text-base text-gray-500 line-through">{{ selected_variant.compare_at_price | money }}</span>
-                                <span class="text-lg text-gray-900">{{ selected_variant.price | money }}</span>
-
-                                {% if selected_variant.price < selected_variant.compare_at_price %}
-                                    <span class="px-5 py-1 text-sm font-bold bg-red-500 rounded-full text-white mx-4">Sale</span>
-                                {% endif %}
-                            </div>
-                        {% when 'variant_selector' %}
-                            <div class="my-3">
-                                {% unless product.has_only_default_variant %}
-                                    <variant-selector data-url="{{ product.url }}" data-section="{{ section.id }}">
-                                        {% for option in product.options_with_values %}
-                                            <label for="Option-{{ section.id }}-{{ forloop.index0 }}">{{ option.name }}</label>
-
-                                            <div class="my-2">
-                                                <select 
-                                                    name="options[{{ option.name | escape }}]" 
-                                                    id="Option-{{ section.id }}-{{ forloop.index0 }}" 
-                                                    class="w-full border py-3 px-3"
-                                                >
-                                                    {% for value in option.values %}
-                                                        <option 
-                                                            value="{{ value | escape }}"
-                                                            {% if option.selected_value == value %}
-                                                                selected="selected"
-                                                            {% endif %}
-                                                        >
-                                                            {{ value }}
-                                                        </option>
-                                                    {% endfor %}
-                                                </select>
-                                            </div>
-
-                                            <script type="application/json">
-                                                {{ product.variants | json }}
-                                            </script>
-
-                                        {% endfor %}
-                                    </variant-selector>
-                                {% endunless %}
-                            </div>
-
-                        {% when 'quantity' %}
-                            <div class="my-3">
-                                <label for="Quantity-{{ section.id }}">Quantity</label>
-
-                                <div class="my-2">
-                                    <input type="number" name="quantity" id="Quantity-{{ section.id }}" value="1" min="1" class="w-full border px-3 py-3">
+                            {% when 'title' %}
+                                <div class="my-3">
+                                    <h1 class="text-3xl text-gray-900">{{ product.title }}</h1>
                                 </div>
-                            </div>
-                        {% when 'description' %}
-                            <div class="my-3">
-                                <p class="text-gray-700">{{ product.description }}</p>
-                            </div>
+                            {% when 'price' %}
+                                <div class="my-3" id="price-{{ section.id }}">
+                                    <span class="text-base text-gray-500 line-through">{{ selected_variant.compare_at_price | money }}</span>
+                                    <span class="text-lg text-gray-900">{{ selected_variant.price | money }}</span>
 
-                        {% when 'checkout_buttons' %}
-                            <div class="my-3">
-                                <button type="submit" name="add" class="w-full px-6 py-4 bg-gray-900 text-white hover:bg-gray-700 rounded-sm my-2"
-                                    {% if selected_variant.available == false %}
-                                        disabled
+                                    {% if selected_variant.price < selected_variant.compare_at_price %}
+                                        <span class="px-5 py-1 text-sm font-bold bg-red-500 rounded-full text-white mx-4">Sale</span>
                                     {% endif %}
-                                >
-                                    {% if selected_variant.available == false %}
-                                        Sold out
-                                    {% else %}
-                                        Add to cart
-                                    {% endif %}
-                                </button>
-                            </div>
-                        {% else %}
-                            
-                    {% endcase %}
-                {% endfor %}
-            {% endform %}
-        </div>
-    </div>
-</div>
+                                </div>
+                            {% when 'variant_selector' %}
+                                <div class="my-3">
+                                    {% unless product.has_only_default_variant %}
+                                        <variant-selector data-url="{{ product.url }}" data-section="{{ section.id }}">
+                                            {% for option in product.options_with_values %}
+                                                <label for="Option-{{ section.id }}-{{ forloop.index0 }}">{{ option.name }}</label>
 
-<div id="productModelModal">
-    <div class="w-full h-full z-50 items-center fixed inset-0">
-        <div class="relative w-full h-full bg-white">
-            <div class="relative">
-                <div class="flex justify-between items-start p-5 border-b">
-                    <h2 class="text-xl font-bold text-gray-700">3D Model Preview</h2>
-                    <button class="text-gray-400 bg-transparent hover:text-gray-700 rounded text-sm p-2 ml-auto inline-flex items-center">
-                        {% render 'icon-close' %}
-                    </button>
-                </div>
+                                                <div class="my-2">
+                                                    <select 
+                                                        name="options[{{ option.name | escape }}]" 
+                                                        id="Option-{{ section.id }}-{{ forloop.index0 }}" 
+                                                        class="w-full border py-3 px-3"
+                                                    >
+                                                        {% for value in option.values %}
+                                                            <option 
+                                                                value="{{ value | escape }}"
+                                                                {% if option.selected_value == value %}
+                                                                    selected="selected"
+                                                                {% endif %}
+                                                            >
+                                                                {{ value }}
+                                                            </option>
+                                                        {% endfor %}
+                                                    </select>
+                                                </div>
 
-                <div id="body" class="block relative">
-                    
-                </div>
+                                                <script type="application/json">
+                                                    {{ product.variants | json }}
+                                                </script>
+
+                                            {% endfor %}
+                                        </variant-selector>
+                                    {% endunless %}
+                                </div>
+
+                            {% when 'quantity' %}
+                                <div class="my-3">
+                                    <label for="Quantity-{{ section.id }}">Quantity</label>
+
+                                    <div class="my-2">
+                                        <input type="number" name="quantity" id="Quantity-{{ section.id }}" value="1" min="1" class="w-full border px-3 py-3">
+                                    </div>
+                                </div>
+                            {% when 'description' %}
+                                <div class="my-3">
+                                    <p class="text-gray-700">{{ product.description }}</p>
+                                </div>
+
+                            {% when 'checkout_buttons' %}
+                                <div class="my-3">
+                                    <button type="submit" name="add" class="w-full px-6 py-4 bg-gray-900 text-white hover:bg-gray-700 rounded-sm my-2"
+                                        {% if selected_variant.available == false %}
+                                            disabled
+                                        {% endif %}
+                                    >
+                                        {% if selected_variant.available == false %}
+                                            Sold out
+                                        {% else %}
+                                            Add to cart
+                                        {% endif %}
+                                    </button>
+                                </div>
+                            {% else %}
+                                
+                        {% endcase %}
+                    {% endfor %}
+                {% endform %}
             </div>
         </div>
     </div>
+
+    <div id="productModelModal">
+        <div x-show="productModalOpen" class="w-full h-full z-50 items-center fixed inset-0">
+            <div class="relative w-full h-full bg-white">
+                <div class="relative">
+                    <div class="flex justify-between items-start p-5 border-b">
+                        <h2 class="text-xl font-bold text-gray-700">3D Model Preview</h2>
+                        <button x-on:click="productModalOpen = false" class="text-gray-400 bg-transparent hover:text-gray-700 rounded text-sm p-2 ml-auto inline-flex items-center">
+                            {% render 'icon-close' %}
+                        </button>
+                    </div>
+
+                    <div id="body" class="block relative">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 <script>
     class VariantSelector extends HTMLElement {
