--- a/sections/hero-banner.liquid
+++ b/sections/hero-banner.liquid
@@ -7,7 +7,7 @@
         >
     {% endif %}
     
-    <div class="absolute inset-0 bg-black bg-opacity-40"></div>
+    <div class="absolute inset-0 bg-opacity-40"></div>
     
     <div class="relative z-10 text-center text-white px-4 max-w-4xl mx-auto">
         {% if section.settings.title != blank %}
